{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 54,
  "lineage": "085fbf6b-ea08-a8b6-6614-cc8200e110e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b11f311160b78fde",
            "public_dns": "ec2-15-207-195-208.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.195.208",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastionhostinstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a780d5bac870126a",
            "arn": "arn:aws:ec2:ap-south-1:000493632188:instance/i-0db9ea1a53a16a43e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db9ea1a53a16a43e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "remotelogin_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c80e734ca66fc669",
            "private_dns": "ip-192-168-0-33.ap-south-1.compute.internal",
            "private_ip": "192.168.0.33",
            "public_dns": "ec2-13-233-109-98.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.109.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d152a36325894d2c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0883d2e31f45f4cfa"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ecba18ac01ac2888",
            "tags": {
              "Name": "bastionhostos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0883d2e31f45f4cfa"
            ]
          },
          "dependencies": [
            "aws_key_pair.remotelogin_key",
            "aws_security_group.mybastionhost",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc",
            "tls_private_key.myprivatekey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysqlinstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06848868ff58d6c0e",
            "arn": "arn:aws:ec2:ap-south-1:000493632188:instance/i-0d873d04dcdb73c4e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d873d04dcdb73c4e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "remotelogin_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-020f35535536e54fa",
            "private_dns": "ip-192-168-1-64.ap-south-1.compute.internal",
            "private_ip": "192.168.1.64",
            "public_dns": "ec2-52-66-20-94.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.20.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00758ea466990a420",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e65f0149433d32df"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f790b058cfbed72",
            "tags": {
              "Name": "mysqlos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e65f0149433d32df"
            ]
          },
          "dependencies": [
            "aws_key_pair.remotelogin_key",
            "aws_security_group.mybastionhost",
            "aws_security_group.mysqlsg",
            "aws_security_group.mywpsg",
            "aws_subnet.subnet2",
            "aws_vpc.myvpc",
            "tls_private_key.myprivatekey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wpinstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f69f7ee089055fe",
            "arn": "arn:aws:ec2:ap-south-1:000493632188:instance/i-0517ee589fb11cf57",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0517ee589fb11cf57",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "remotelogin_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c7402619ecd815cc",
            "private_dns": "ip-192-168-0-182.ap-south-1.compute.internal",
            "private_ip": "192.168.0.182",
            "public_dns": "ec2-15-206-167-50.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.167.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00929fffb62be9a8d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-037d8f9b3409ec966"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ecba18ac01ac2888",
            "tags": {
              "Name": "wpos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-037d8f9b3409ec966"
            ]
          },
          "dependencies": [
            "aws_key_pair.remotelogin_key",
            "aws_security_group.mywpsg",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc",
            "tls_private_key.myprivatekey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:000493632188:internet-gateway/igw-0bb7858ff94947889",
            "id": "igw-0bb7858ff94947889",
            "owner_id": "000493632188",
            "tags": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-038cc6cdea69b6fd2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b11f311160b78fde",
            "id": "nat-01faf0f9777956fef",
            "network_interface_id": "eni-06c1e18d765e20c72",
            "private_ip": "192.168.0.247",
            "public_ip": "15.207.195.208",
            "subnet_id": "subnet-0ecba18ac01ac2888"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b16fc4c8b2a42e1f",
            "owner_id": "000493632188",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb7858ff94947889",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myroutetable"
            },
            "vpc_id": "vpc-038cc6cdea69b6fd2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-038f6e39fcc531227",
            "owner_id": "000493632188",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01faf0f9777956fef",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-038cc6cdea69b6fd2"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.NATgw",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassociation1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082c25568ceb80357",
            "route_table_id": "rtb-0b16fc4c8b2a42e1f",
            "subnet_id": "subnet-0ecba18ac01ac2888"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route1",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassociation2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8d95c170918a32a",
            "route_table_id": "rtb-038f6e39fcc531227",
            "subnet_id": "subnet-09f790b058cfbed72"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.NATgw",
            "aws_route_table.route2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mybastionhost",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:000493632188:security-group/sg-0883d2e31f45f4cfa",
            "description": "Allow SSH from outside world",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0883d2e31f45f4cfa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "000493632188",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-038cc6cdea69b6fd2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysqlsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:000493632188:security-group/sg-0e65f0149433d32df",
            "description": "Allow MYSQL from wordpress only for privacy",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e65f0149433d32df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-037d8f9b3409ec966"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0883d2e31f45f4cfa"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysql_sg",
            "name_prefix": "",
            "owner_id": "000493632188",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-038cc6cdea69b6fd2"
          },
          "dependencies": [
            "aws_security_group.mybastionhost",
            "aws_security_group.mywpsg",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mywpsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:000493632188:security-group/sg-037d8f9b3409ec966",
            "description": "Allow HTTP and SSH for wordpress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037d8f9b3409ec966",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wordpress_sg",
            "name_prefix": "",
            "owner_id": "000493632188",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-038cc6cdea69b6fd2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:000493632188:subnet/subnet-0ecba18ac01ac2888",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0ecba18ac01ac2888",
            "map_public_ip_on_launch": true,
            "owner_id": "000493632188",
            "tags": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-038cc6cdea69b6fd2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:000493632188:subnet/subnet-09f790b058cfbed72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-09f790b058cfbed72",
            "map_public_ip_on_launch": true,
            "owner_id": "000493632188",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-038cc6cdea69b6fd2"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:000493632188:vpc/vpc-038cc6cdea69b6fd2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d7d6c598c6e62c80",
            "default_route_table_id": "rtb-015234ef144dded8a",
            "default_security_group_id": "sg-05d19190e3d3648c5",
            "dhcp_options_id": "dopt-7add2711",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-038cc6cdea69b6fd2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-015234ef144dded8a",
            "owner_id": "000493632188",
            "tags": {
              "Name": "wordpressvpc"
            }
          }
        }
      ]
    }
  ]
}